kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shared-service
spec:
  selector:
    app: shared-app # Note: Each Deployment must have a common label
  ports:
    - port: 80 # External port
      targetPort: 8080 # Container's port
  type: ClusterIP # Internal service, use Ingress for external exposure
